--- a/cr7/css/style.css
+++ b/cr7/css/style.css
@@ -11,7 +11,9 @@
     --primary-text-color: #A5823C;
     --dark-100: #24282C;
     --grey-light:#878787;
+    --grey-40:#87878766;
     --padding-inline-section: 20px;
+
 }
 
 body {
@@ -97,5 +99,43 @@ ul {
 /*nav bar*/
 
 .logo {
+    font-size: 2rem;
+}
 
+nav ul{
+    justify-content: end;
+    gap: 3rem;
+    margin-left: 9.38rem;
+}
+
+.pipe {
+    width: 0.125rem;
+    height: 1.5rem;
+    border-radius: 6.25rem;
+    background: var(--grey-40, rgba(135, 135, 135, 0.40));
+}
+
+nav .nav-button{
+    padding: 1.5rem 2rem;
+    justify-content: center;
+    margin: 3rem 0 5rem;
+}
+
+/*hero section*/
+
+.hero-section-left{
+    width: 70%;
+}
+.hero-section-left h3{
+    font-size: 1.5rem;
+    margin: 5.31rem 1rem 5rem;
+}
+
+
+.hero-section-image {
+    width: 100%;
+}
+
+.hero-section-image img{
+    width: 100%;
 }
